# byteSnap

./: README.md  setup.cfg  setup.py
byteSnap/: __init__.py  byteSnap.py  byteSnap_help.py
byteSnap.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
