[metadata]
name = byteSnap
version = 0.1.0
author = Madhav Swami
description = A utility to manage image files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/byteSnap
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
